ContentAnalyzer escapes {} in url.